# swig-example

./: .gitignore  CMakeLists.txt  utils.cmake
src/: CMakeLists.txt  Foobar.cpp  Foobar.hpp
src/languages/: interface.i
src/languages/python/: CMakeLists.txt  MANIFEST.in  setup.py
test/: CMakeLists.txt
test/languages/python/: CMakeLists.txt  test.py
